// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<div
  className="{\\"style\\":{\\"height\\":\\"100%\\",\\"display\\":\\"flex\\",\\"alignItems\\":\\"center\\",\\"justifyContent\\":\\"center\\",\\"background\\":false}}"
>
  <div
    style={
      Object {
        "height": 50,
        "margin": "auto",
        "width": 50,
      }
    }
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style={
            Object {
              "fill": "#bfbfbf",
            }
          }
        />
        <rect
          className="loading-bar"
          height={59}
          style={
            Object {
              "fill": "#fff",
            }
          }
          width={30}
          x={16}
          y={15}
        />
        <rect
          className="loading-bar-sm"
          height={25}
          style={
            Object {
              "fill": "#fff",
            }
          }
          width={25}
          x={53}
          y={52}
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render height100 1`] = `
<div
  className="{\\"style\\":{\\"height\\":100,\\"display\\":\\"flex\\",\\"alignItems\\":\\"center\\",\\"justifyContent\\":\\"center\\",\\"background\\":false}}"
>
  <div
    style={
      Object {
        "height": 50,
        "margin": "auto",
        "width": 50,
      }
    }
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style={
            Object {
              "fill": "#bfbfbf",
            }
          }
        />
        <rect
          className="loading-bar"
          height={59}
          style={
            Object {
              "fill": "#fff",
            }
          }
          width={30}
          x={16}
          y={15}
        />
        <rect
          className="loading-bar-sm"
          height={25}
          style={
            Object {
              "fill": "#fff",
            }
          }
          width={25}
          x={53}
          y={52}
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`message 1`] = `
<div
  className="{\\"style\\":{\\"height\\":\\"100%\\",\\"display\\":\\"flex\\",\\"alignItems\\":\\"center\\",\\"justifyContent\\":\\"center\\",\\"background\\":false}}"
>
  <div
    style={
      Object {
        "height": 50,
        "margin": "auto",
        "width": 50,
      }
    }
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style={
            Object {
              "fill": "#bfbfbf",
            }
          }
        />
        <rect
          className="loading-bar"
          height={59}
          style={
            Object {
              "fill": "#fff",
            }
          }
          width={30}
          x={16}
          y={15}
        />
        <rect
          className="loading-bar-sm"
          height={25}
          style={
            Object {
              "fill": "#fff",
            }
          }
          width={25}
          x={53}
          y={52}
        />
      </g>
    </svg>
    <div
      className="{\\"style\\":[{\\"textAlign\\":\\"center\\"},null]}"
    >
      loading
    </div>
  </div>
</div>
`;

exports[`Render shaded 1`] = `
<div
  className="{\\"style\\":{\\"height\\":\\"100%\\",\\"display\\":\\"flex\\",\\"alignItems\\":\\"center\\",\\"justifyContent\\":\\"center\\",\\"background\\":\\"#f1f1f1\\"}}"
>
  <div
    style={
      Object {
        "height": 50,
        "margin": "auto",
        "width": 50,
      }
    }
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style={
            Object {
              "fill": "#bfbfbf",
            }
          }
        />
        <rect
          className="loading-bar"
          height={59}
          style={
            Object {
              "fill": "#f1f1f1",
            }
          }
          width={30}
          x={16}
          y={15}
        />
        <rect
          className="loading-bar-sm"
          height={25}
          style={
            Object {
              "fill": "#f1f1f1",
            }
          }
          width={25}
          x={53}
          y={52}
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render styleheight 1`] = `
<div
  className="{\\"style\\":{\\"height\\":\\"100%\\",\\"display\\":\\"flex\\",\\"alignItems\\":\\"center\\",\\"justifyContent\\":\\"center\\",\\"background\\":false}}"
>
  <div
    style={
      Object {
        "height": 50,
        "margin": "auto",
        "width": 50,
      }
    }
  >
    <svg
      height="100%"
      version="1.1"
      viewBox="0 0 94 91"
      width="100%"
    >
      <g>
        <path
          d="M94,18.634c0,-10.284 -8.35,-18.634 -18.634,-18.634l-56.732,0c-10.284,0 -18.634,8.35 -18.634,18.634l0,53.732c0,10.284 8.35,18.634 18.634,18.634l56.732,0c10.284,0 18.634,-8.35 18.634,-18.634l0,-53.732Z"
          style={
            Object {
              "fill": "#bfbfbf",
            }
          }
        />
        <rect
          className="loading-bar"
          height={59}
          style={
            Object {
              "fill": "#fff",
            }
          }
          width={30}
          x={16}
          y={15}
        />
        <rect
          className="loading-bar-sm"
          height={25}
          style={
            Object {
              "fill": "#fff",
            }
          }
          width={25}
          x={53}
          y={52}
        />
      </g>
    </svg>
  </div>
</div>
`;
